--- a/prontuario/index.html
+++ b/prontuario/index.html
@@ -1,20 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Prontuario base</title>
+   <title>Index</title>
    <link rel="stylesheet" href="style.css">
+   <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
-<body>
-   <header>
 
-   </header>
-   <main>
-      <div class="container">
-         <div class="navbar">a</div>
-         <div class="conteudo">b</div>
+<body>
+   <!-- INICIO do HEADER -->
+   <div class="header shadow">
+      <div class="logo">
+         <i class="fa-solid fa-notes-medical"></i>
+         <p>UNI-TI</p>
       </div>
-   </main>
+      <div class="login">
+         <i class="fa-solid fa-user-doctor"></i>
+         <p id="name">Dr. Paulo</p>
+         <p id="profissao">Médico</p>
+         <i class="fa-solid fa-bars"></i>
+      </div>
+   </div>
+   <!-- FIM do HEADER -->
+   <!-- INICIO do conteudo principal -->
+   <div class="main">
+
+
+      <!-- INICIO do NAVBAR -->
+      <div class="navbar shadow">
+         <h1 class="dados">DADOS</h1>
+         <ul>
+            <li class="itemList" id="navPaciente"><i class="icon fa-solid fa-user"></i><span
+                  class="spanNone">Pacientes</span></li>
+            <li class="itemList" id="navAgenda"><i class="icon fa-solid fa-notes-medical"></i><span
+                  class="spanNone">Anamnese</span></li>
+            <li class="itemList" id="navServicos"><i class="icon fa-solid fa-clipboard"></i><span
+                  class="spanNone">Anotações</span></li>
+            <li class="itemList" id="navFinanceiro"><i class="icon fa-solid fa-droplet"></i><span
+                  class="spanNone">Balanço Hídrico</span></li>
+         </ul>
+
+         <div class="buttonPosition">
+            <button type="button" class="btn">BUSCAR</button>
+         </div>
+
+      </div>
+      <!-- FIM do NAVBAR -->
+
+      <!-- INICIO do CONTEUDO -->
+      <div class="conteudo shadow">
+
+      </div>
+      <!-- FIM do CONTEUDO -->
+   </div>
+   <!-- FIM do conteudo principal -->
 </body>
+
 </html>
